# nft-without-metaplex-and-candymachine

./: Anchor.toml  README.md
app/: package-lock.json  package.json
app/src/: App.tsx
programs/nft-without-metaplex-and-candymachine/: Cargo.toml
programs/nft-without-metaplex-and-candymachine/src/: lib.rs
programs/nft-without-metaplex-and-candymachine/src/instructions/: create_nft.rs  init_shit.rs  mod.rs
programs/nft-without-metaplex-and-candymachine/src/states/: data.rs  metadata.rs  mod.rs
tests/: nft-without-metaplex-and-candymachine.ts
